# rust-flextide-automations

./: .cursorignore  .gitignore  CONTRIBUTING.md  README.md
.cursor/rules/: api_authentication.mdc  architecture.mdc  coding_standards.mdc  cursor_rules.mdc  database_migrations.mdc  event_system.mdc  folder_structure.mdc  frontend_colors.mdc  frontend_styleguide.mdc  marketplace.mdc  node_system.mdc  owasp_security.mdc  password_authentication.mdc  sqlx_testing.mdc  ui_editor.mdc
backend/: .dockerignore  .env.sample  Cargo.toml  Dockerfile.api  Dockerfile.worker
backend/crates/api/: Cargo.toml
backend/crates/api/src/: backup.rs  chroma.rs  credentials.rs  lib.rs
backend/crates/flextide-core/: Cargo.toml  README.md
backend/crates/flextide-core/src/: lib.rs
backend/crates/flextide-core/src/backup/: backup.rs  database.rs  error.rs  execution.rs  mod.rs
backend/crates/flextide-core/src/credentials/: README.md  credentials.rs  database.rs  error.rs  mod.rs
backend/crates/flextide-core/src/database/: mod.rs
backend/crates/flextide-core/src/events/: README.md  database.rs  dispatcher.rs  mod.rs  subscriber.rs  tests.rs  types.rs  webhooks.rs
backend/crates/flextide-core/src/jwt/: mod.rs
backend/crates/flextide-core/src/permissions/: database.rs  mod.rs
backend/crates/flextide-core/src/queue/: mod.rs  queue.rs
backend/crates/flextide-core/src/settings/: database.rs  mod.rs
backend/crates/flextide-core/src/user/: database.rs  mod.rs  password.rs  validation.rs
backend/crates/integrations/: Cargo.toml  README.md
backend/crates/integrations/src/: lib.rs
backend/crates/integrations/src/chroma/: README.md  client.rs  error.rs  mod.rs  types.rs
backend/crates/integrations/src/github/: README.md  client.rs  error.rs  mod.rs  types.rs
backend/crates/integrations/src/gitlab/: client.rs  error.rs  mod.rs  types.rs
backend/crates/integrations/src/jira/: README.md  client.rs  error.rs  mod.rs  types.rs
backend/crates/integrations/src/openai/: client.rs  error.rs  mod.rs  types.rs
backend/crates/modules/crm/: Cargo.toml  README.md
backend/crates/modules/crm/src/: api.rs  lib.rs
backend/crates/modules/crm/src/customer/: database.rs  mod.rs
backend/crates/modules/docs/: Cargo.toml  README.md
backend/crates/modules/docs/src/: api.rs  area.rs  folder.rs  lib.rs  page.rs  summary.rs  tree.rs
backend/crates/modules/docs/src/summary/: claude.rs  gemini.rs  openai.rs
backend/crates/modules/project-management/: Cargo.toml  README.md
backend/crates/modules/project-management/src/: api.rs  lib.rs
backend/crates/node_registry/: Cargo.toml
backend/crates/node_registry/src/: lib.rs  registry.rs
backend/crates/node_stdlib/: Cargo.toml
backend/crates/node_stdlib/src/: lib.rs
backend/crates/sdk/: Cargo.toml
backend/crates/sdk/src/: lib.rs
backend/crates/sdk/src/abi/: mod.rs
backend/crates/sdk/src/node/: mod.rs
backend/crates/sdk/src/plugin/: mod.rs
backend/crates/worker/: Cargo.toml
backend/migrations/: 20251111213705_user.sql  20251113173059_module_crm_customers.sql  20251113174357_module_crm_conversations.sql  20251114012923_create_permission_groups_table.sql  20251116211522_create_queue_messages_table.sql  20251118143136_create_event_subscriptions_table.sql  20251118150521_create_webhooks_table.sql  20251118163507_module_docs_areas.sql  20251118170000_module_docs_pages.sql  20251118231653_create_credentials_table.sql  20251120034117_add_area_color_and_topics.sql  20251120143123_create_backup_system.sql  20251120204156_add_raw_text_page_type.sql  20251120222218_add_credentials_permissions.sql  20251120230000_add_page_flags_and_metadata.sql  20251121214151_add_chroma_database_credential_type.sql  20251125175036_add_folder_permission_flags.sql  20251125182859_add_folder_flags_and_metadata.sql  20251125191206_rename_cs_export_to_vcs_export_in_folders.sql  20251127173325_create_organizational_settings.sql  20251127174849_add_docs_module_settings.sql  README.md
backend/tests/: auth_test.rs  crm_test.rs  middleware_test.rs
backend/tests/common/: mod.rs
docs/: ARCHITECTURE.md  EVENTS.md  QUEUE_SYSTEMS.md  ROADMAP.md  Requirements.md
docs/modules/: CRM.md
docs/research/: Chroma_API.md  Credential_Storage.md  GITHUB_API.md  GITLAB_API.md  JIRA_API.md  Markdown_WYSIWYG_Editor.md  OpenAI_API.md
frontend/: .dockerignore  Dockerfile  jest.config.js  package.json  pnpm-lock.yaml
frontend/.cursor/rules/: nextjs_best_practices.mdc
frontend/public/logo/: Favicon.xcf  Favicon_white_bg.xcf  Logo.xcf  ReadMe.txt
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/ai-coworkers/: page.tsx
frontend/src/app/executions/: page.tsx
frontend/src/app/integrations/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/workflows/: page.tsx
frontend/src/components/ai-coworkers/: AICoworkerCreationModal.tsx  AICoworkerQuickActions.tsx  AICoworkerStatistics.tsx  AICoworkersSection.tsx  RunningStatusChart.tsx
frontend/src/components/auth/: AuthProvider.tsx
frontend/src/components/common/: ErrorDialog.tsx  Icon.tsx  LineChart.tsx  PieChart.tsx  ThemeProvider.tsx  ToastContainer.tsx  WorkflowQuickActions.tsx
frontend/src/components/crm/: CreateCustomerDialog.tsx  CrmCustomersSection.tsx  CrmKpiCards.tsx
frontend/src/components/docs/: CreateAreaDialog.tsx  CreateDocumentDialog.tsx  CreateFolderDialog.tsx  DeleteAreaDialog.tsx  DeleteFolderDialog.tsx  EditAreaDialog.tsx  EditFolderDialog.tsx  EditorModeSelector.tsx  EditorToolbar.tsx  FolderPropertiesDialog.tsx  MarkdownEditor.tsx  (+7 more)
frontend/src/contexts/: ToastContext.tsx
frontend/src/lib/: api.ts  auth.ts  iconMapper.ts  icons-README.md  icons.ts  organization.ts  permissions.ts  toast.ts
(+46 files in other folders)
