[package]
name = "flextide-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
argon2 = "0.5"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "mysql", "postgres", "sqlite"] }
tokio = { version = "1.48.0", features = ["rt"] }
uuid = { version = "1.10", features = ["v4"] }
dotenvy = "0.15"
async-trait = "0.1"
dashmap = "6.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
