[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
quick-js = { version = "0.4.1", features = ["bigint", "chrono", "log"] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
wasi-cap-std-sync = "17.0.3"
wasmtime = "38.0.3"
flextide-core = { path = "../flextide-core" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
